--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.2",
     "tw-animate-css": "^1.2.5",
