--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,10 @@
 {
-  "recommendations": ["tauri-apps.tauri-vscode", "rust-lang.rust-analyzer"]
+    "recommendations": [
+        "tauri-apps.tauri-vscode",
+        "yoavbls.pretty-ts-errors",
+        "bradlc.vscode-tailwindcss",
+        "esbenp.prettier-vscode",
+        "christian-kohler.npm-intellisense",
+        "dbaeumer.vscode-eslint"
+    ]
 }
